--- a/UI/AdvancedXBind/AdvancedXBind.Shared/MainPage.xaml
+++ b/UI/AdvancedXBind/AdvancedXBind.Shared/MainPage.xaml
@@ -1,38 +1,72 @@
-﻿<Page
-    x:Class="AdvancedXBind.MainPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="using:AdvancedXBind.Converters"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:sys="using:System"
-    xmlns:vm="using:AdvancedXBind.ViewModel"
-    mc:Ignorable="d"
-    Background="White"
-    >
-    <Page.Resources>
-        <converters:DoubleToStringConverter x:Key="DoubleToStringConverter"/>
-    </Page.Resources>
-    <Grid DataContext="{x:Bind vm:PlanetViewModel.Create('Jupiter')}" Margin="40" RowSpacing="20" ColumnSpacing="10" HorizontalAlignment="Stretch" VerticalAlignment="Top">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <TextBlock Text="{Binding Planet.Name}" Grid.ColumnSpan="2" HorizontalAlignment="Center" FontSize="32" Foreground="IndianRed" Margin="5,5,5,15"/>
-        <TextBlock Grid.Row="1" HorizontalAlignment="Right" TextWrapping="WrapWholeWords" FontWeight="Bold" >Enter your weight on Earth:</TextBlock>
-        <TextBox Grid.Row="1" Grid.Column="1" x:Name="tb" />
-        <TextBlock Grid.Row="2" HorizontalAlignment="Right" TextWrapping="WrapWholeWords" FontWeight="Bold">Your weight on Jupiter:</TextBlock>
-        <TextBlock Text="{x:Bind ViewModel.WeightOnPlanet(tb.Text), Mode=OneWay}" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"/>
-        <Button Grid.Row="3" HorizontalAlignment="Right" Content="Display Planet Information" Click="{x:Bind DisplayPlanetSync}"/>
-        <TextBlock Grid.Row="3" Grid.Column="1" Text="{x:Bind GetResultOfAsyncMethod()}"/>
-        <TextBlock Grid.Row="4" HorizontalAlignment="Right" FontWeight="Bold" TextWrapping="WrapWholeWords" Text="Approx Planet Density (KG/M3):"/>
-        <TextBlock Grid.Row="4" Grid.Column="1" Text="{x:Bind ViewModel.CalculateDensity(ViewModel.Planet.Mass, ViewModel.Planet.Diameter)}"/>
-    </Grid>
+﻿<Page x:Class="AdvancedXBind.MainPage"
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:converters="using:AdvancedXBind.Converters"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  xmlns:sys="using:System"
+	  xmlns:vm="using:AdvancedXBind.ViewModel"
+	  mc:Ignorable="d"
+	  Background="White">
+	<Page.Resources>
+		<converters:DoubleToStringConverter x:Key="DoubleToStringConverter" />
+	</Page.Resources>
+	<Grid DataContext="{x:Bind vm:PlanetViewModel.Create('Jupiter')}"
+		  Margin="40"
+		  RowSpacing="20"
+		  ColumnSpacing="10"
+		  HorizontalAlignment="Stretch"
+		  VerticalAlignment="Top">
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition />
+			<RowDefinition />
+		</Grid.RowDefinitions>
+		<TextBlock Text="{Binding Planet.Name}"
+				   Grid.ColumnSpan="2"
+				   HorizontalAlignment="Center"
+				   FontSize="32"
+				   Foreground="IndianRed"
+				   Margin="5,5,5,15" />
+		<TextBlock Grid.Row="1"
+				   HorizontalAlignment="Right"
+				   TextWrapping="WrapWholeWords"
+				   FontWeight="Bold">
+			Enter your weight on Earth:
+		</TextBlock>
+		<TextBox Grid.Row="1"
+				 Grid.Column="1"
+				 x:Name="tb" />
+		<TextBlock Grid.Row="2"
+				   HorizontalAlignment="Right"
+				   TextWrapping="WrapWholeWords"
+				   FontWeight="Bold">
+			Your weight on Jupiter:
+		</TextBlock>
+		<TextBlock Text="{x:Bind ViewModel.WeightOnPlanet(tb.Text), Mode=OneWay}"
+				   Grid.Row="2"
+				   Grid.Column="1"
+				   Grid.ColumnSpan="2" />
+		<Button Grid.Row="3"
+				HorizontalAlignment="Right"
+				Content="Display Planet Information"
+				Click="{x:Bind DisplayPlanetSync}" />
+		<TextBlock Grid.Row="3"
+				   Grid.Column="1"
+				   Text="{x:Bind GetResultOfAsyncMethod()}" />
+		<TextBlock Grid.Row="4"
+				   HorizontalAlignment="Right"
+				   FontWeight="Bold"
+				   TextWrapping="WrapWholeWords"
+				   Text="Approx Planet Density (KG/M3):" />
+		<TextBlock Grid.Row="4"
+				   Grid.Column="1"
+				   Text="{x:Bind ViewModel.CalculateDensity(ViewModel.Planet.Mass, ViewModel.Planet.Diameter)}" />
+	</Grid>
 </Page>
