chore: Removing C1 library references and adding instructions/TODO items

--- a/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp.MauiControls/EmbeddedControl.xaml
+++ b/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp.MauiControls/EmbeddedControl.xaml
@@ -9,29 +9,31 @@
 		<Label Text="Embedded MAUI Content"
 			   VerticalOptions="Center"
 			   HorizontalOptions="Center" />
-		<c1:FlexGrid x:Name="grid" AutoGenerateColumns="False"
-             AlternatingRowForeground="purple"
-             AlternatingRowBackground="#ddccff"
-             BackgroundColor="#ffe6ff"
-             RowBackground="White"
-             RowForeground="Black"                 
-             GridLinesVisibility="None"
-             ColumnHeaderGridLinesVisibility="None"
-             ColumnHeaderBackground="#ccccff" 
-             ColumnHeaderForeground="#5c0099" 
-             ColumnHeaderFontAttributes="Bold"
-             SelectionBackground="#ff66ff" 
-             SelectionForeground="purple">
-		<c1:FlexGrid.Columns>
-			<c1:GridColumn Binding="FirstName" />
-			<c1:GridColumn Binding="LastName" />
-			<c1:GridColumn Binding="City" />
-			<c1:GridColumn Binding="Country" />
-			<c1:GridColumn Binding="Active" />
-		</c1:FlexGrid.Columns>
+		<!-- TODO: Uncomment the C1 control you want to use -->
+		<!--<c1:FlexGrid x:Name="grid"
+					 AutoGenerateColumns="False"
+					 AlternatingRowForeground="purple"
+					 AlternatingRowBackground="#ddccff"
+					 BackgroundColor="#ffe6ff"
+					 RowBackground="White"
+					 RowForeground="Black"
+					 GridLinesVisibility="None"
+					 ColumnHeaderGridLinesVisibility="None"
+					 ColumnHeaderBackground="#ccccff"
+					 ColumnHeaderForeground="#5c0099"
+					 ColumnHeaderFontAttributes="Bold"
+					 SelectionBackground="#ff66ff"
+					 SelectionForeground="purple">
+			<c1:FlexGrid.Columns>
+				<c1:GridColumn Binding="FirstName" />
+				<c1:GridColumn Binding="LastName" />
+				<c1:GridColumn Binding="City" />
+				<c1:GridColumn Binding="Country" />
+				<c1:GridColumn Binding="Active" />
+			</c1:FlexGrid.Columns>
 		</c1:FlexGrid>
 		<c1:C1Calendar x:Name="calendar"
 					   HeightRequest="300"
-					   WidthRequest="300" />
+					   WidthRequest="300" />-->
 	</VerticalStackLayout>
 </ContentView>
