--- a/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp/MainPage.xaml
+++ b/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp/MainPage.xaml
@@ -13,6 +13,8 @@
 			<TextBlock AutomationProperties.AutomationId="HelloTextBlock"
 					   Text="Hello Uno Platform"
 					   HorizontalAlignment="Center" />
+			<TextBlock Text="Instructions: Locate TODO items in code and uncomment the appropriate code in order to use the GrapeCity C1 controls (FlexGrid and Calendar)"
+					   HorizontalAlignment="Center" />
 			<embed:MauiHost x:Name="MauiHostElement"
 							xmlns:embed="using:Uno.Extensions.Maui"
 							xmlns:controls="using:GrapeCityApp.MauiControls"
