--- a/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp.MauiControls/EmbeddedControl.xaml
+++ b/UI/MauiEmbedding/GrapeCityApp/GrapeCityApp.MauiControls/EmbeddedControl.xaml
@@ -2,38 +2,38 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
 			 xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-			 xmlns:c1="http://schemas.componentone.com/winfx/2006/xaml"
 			 x:Class="GrapeCityApp.MauiControls.EmbeddedControl"
-			 HorizontalOptions="Fill">
-	<VerticalStackLayout>
-		<Label Text="Embedded MAUI Content"
-			   VerticalOptions="Center"
-			   HorizontalOptions="Center" />
-		<!-- TODO: Uncomment the C1 control you want to use -->
-		<!--<c1:FlexGrid x:Name="grid"
-					 AutoGenerateColumns="False"
-					 AlternatingRowForeground="purple"
-					 AlternatingRowBackground="#ddccff"
-					 BackgroundColor="#ffe6ff"
-					 RowBackground="White"
-					 RowForeground="Black"
-					 GridLinesVisibility="None"
-					 ColumnHeaderGridLinesVisibility="None"
-					 ColumnHeaderBackground="#ccccff"
-					 ColumnHeaderForeground="#5c0099"
-					 ColumnHeaderFontAttributes="Bold"
-					 SelectionBackground="#ff66ff"
-					 SelectionForeground="purple">
-			<c1:FlexGrid.Columns>
-				<c1:GridColumn Binding="FirstName" />
-				<c1:GridColumn Binding="LastName" />
-				<c1:GridColumn Binding="City" />
-				<c1:GridColumn Binding="Country" />
-				<c1:GridColumn Binding="Active" />
-			</c1:FlexGrid.Columns>
-		</c1:FlexGrid>
-		<c1:C1Calendar x:Name="calendar"
-					   HeightRequest="300"
-					   WidthRequest="300" />-->
+			 HorizontalOptions="Fill"
+			 VerticalOptions="Fill">
+	<VerticalStackLayout
+		Spacing="25"
+		Padding="30,0"
+		VerticalOptions="Center">
+
+		<Image
+			Source="GrapeCityApp/Assets/Images/dotnet_bot.png"
+			SemanticProperties.Description="Cute dot net bot waving hi to you!"
+			HeightRequest="200"
+			HorizontalOptions="Center" />
+
+		<Label
+			Text="Hello, World!"
+			SemanticProperties.HeadingLevel="Level1"
+			FontSize="32"
+			HorizontalOptions="Center" />
+
+		<Label
+			Text="Welcome to .NET Multi-platform App UI"
+			SemanticProperties.HeadingLevel="Level2"
+			SemanticProperties.Description="Welcome to dot net Multi platform App U I"
+			FontSize="18"
+			HorizontalOptions="Center" />
+
+		<Button
+			Text="{Binding CounterText}"
+			SemanticProperties.Hint="Counts the number of times you click"
+			Command="{Binding Counter}"
+			HorizontalOptions="Center" />
+
 	</VerticalStackLayout>
 </ContentView>
