--- a/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp/AppResources.xaml
+++ b/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp/AppResources.xaml
@@ -4,9 +4,9 @@
 	<ResourceDictionary.MergedDictionaries>
 		<!-- Load WinUI resources -->
 		<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-		<MaterialToolkitTheme xmlns="using:Uno.Toolkit.UI.Material"
+		<!--<MaterialToolkitTheme xmlns="using:Uno.Toolkit.UI.Material"
 			ColorOverrideSource="ms-appx:///SyncfusionApp/Styles/ColorPaletteOverride.xaml"
-			FontOverrideSource="ms-appx:///SyncfusionApp/Styles/MaterialFontsOverride.xaml" />
+			FontOverrideSource="ms-appx:///SyncfusionApp/Styles/MaterialFontsOverride.xaml" />-->
 
 	</ResourceDictionary.MergedDictionaries>
 	<!-- Add resources here -->
