--- a/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp/Presentation/Shell.xaml
+++ b/UI/MauiEmbedding/SyncFusionApp/SyncFusionApp/Presentation/Shell.xaml
@@ -8,7 +8,7 @@
 	mc:Ignorable="d"
 	d:DesignHeight="300"
 	d:DesignWidth="400">
-	<Border Background="{ThemeResource BackgroundBrush}">
+	<Border Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 		<utu:ExtendedSplashScreen x:Name="Splash"
 								HorizontalAlignment="Stretch"
 								VerticalAlignment="Stretch"
