--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp/Presentation/MainPage.xaml
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp/Presentation/MainPage.xaml
@@ -1,30 +1,45 @@
-<Page x:Class="MauiCommunityToolkitApp.Presentation.MainPage"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:local="using:MauiCommunityToolkitApp.Presentation"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	mc:Ignorable="d"
-	xmlns:uen="using:Uno.Extensions.Navigation.UI"
-	NavigationCacheMode="Required"
-	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+<Page
+    x:Class="MauiCommunityToolkitApp.Presentation.MainPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:MauiCommunityToolkitApp.Presentation"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:uen="using:Uno.Extensions.Navigation.UI"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    NavigationCacheMode="Required"
+    mc:Ignorable="d">
 
-	<Grid>
-		<NavigationView uen:Region.Attached="True">
-			<NavigationView.MenuItems>
-				<NavigationViewItem Content="Avatar"
-									uen:Region.Name="Avatar" />
-				
+    <Grid>
+        <NavigationView uen:Region.Attached="True">
+            <NavigationView.MenuItems>
+                <NavigationViewItem uen:Region.Name="Avatar" Content="Avatar" />
+                <NavigationViewItem uen:Region.Name="DrawingView" Content="DrawingView" />
+            </NavigationView.MenuItems>
+            <Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility">
+                <embed:MauiHost
+                    xmlns:controls="using:MauiCommunityToolkitApp.MauiControls"
+                    xmlns:embed="using:Uno.Extensions.Maui"
+                    uen:Region.Name="Avatar"
+                    Source="controls:AvatarControl"
+                    Visibility="Collapsed" />
+                <StackPanel uen:Region.Name="DrawingView" Visibility="Collapsed">
+                    <StackPanel.DataContext>
+                        <local:DrawingViewViewModel />
+                    </StackPanel.DataContext>
 
-			</NavigationView.MenuItems>
-			<Grid uen:Region.Attached="True"
-				  uen:Region.Navigator="Visibility">
-				<embed:MauiHost uen:Region.Name="Avatar"
-								xmlns:embed="using:Uno.Extensions.Maui"
-								xmlns:controls="using:MauiCommunityToolkitApp.MauiControls"
-								Source="controls:AvatarControl"
-								Visibility="Collapsed" />
-			</Grid>
-		</NavigationView>
-	</Grid>
+                    <TextBlock Text="Clean on Finish:" />
+                    <ToggleSwitch IsOn="{Binding ShouldCleanOnFinish, Mode=TwoWay}" />
+                    <TextBlock Text="MultiLineMode:" />
+                    <ToggleSwitch x:Name="MultiLineMode" IsOn="{Binding IsMultiLineModeEnabled, Mode=TwoWay}" />
+                    <embed:MauiHost
+                        xmlns:controls="using:MauiCommunityToolkitApp.MauiControls"
+                        xmlns:embed="using:Uno.Extensions.Maui"
+                        MinWidth="600"
+                        MinHeight="300"
+                        Source="controls:DrawingViewControl" />
+                </StackPanel>
+            </Grid>
+        </NavigationView>
+    </Grid>
 </Page>
