feat: added Expander sample

--- a/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp/Presentation/MainPage.xaml
+++ b/UI/MauiEmbedding/MauiCommunityToolkitApp/MauiCommunityToolkitApp/Presentation/MainPage.xaml
@@ -15,6 +15,7 @@
             <NavigationView.MenuItems>
                 <NavigationViewItem uen:Region.Name="Avatar" Content="Avatar" />
                 <NavigationViewItem uen:Region.Name="DrawingView" Content="DrawingView" />
+                <NavigationViewItem uen:Region.Name="Expander" Content="Expander" />
             </NavigationView.MenuItems>
             <Grid uen:Region.Attached="True" uen:Region.Navigator="Visibility">
                 <embed:MauiHost
@@ -24,6 +25,14 @@
                     Source="controls:AvatarControl"
                     Visibility="Collapsed" />
                 <local:DrawingViewContent uen:Region.Name="DrawingView" Visibility="Collapsed" />
+                <embed:MauiHost
+                    xmlns:controls="using:MauiCommunityToolkitApp.MauiControls"
+                    xmlns:embed="using:Uno.Extensions.Maui"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    uen:Region.Name="Expander"
+                    Source="controls:ExpanderControl"
+                    Visibility="Collapsed" />
             </Grid>
         </NavigationView>
     </Grid>
