chore: Removing package references to app builds and runs

--- a/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/ChartControl.xaml
+++ b/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/ChartControl.xaml
@@ -8,8 +8,9 @@
 			xmlns:local="clr-namespace:DevExpressApp.MauiControls"
 			HorizontalOptions="Fill"
 			VerticalOptions="Fill">
-
-	<dxc:ChartView>
+	<Label Text="ChartView (Search and apply TODO comments)" />
+	<!-- TODO: Uncomment -->
+	<!--<dxc:ChartView>
 		<dxc:ChartView.BindingContext>
 			<local:ViewModel />
 		</dxc:ChartView.BindingContext>
@@ -44,5 +45,5 @@
 				</dxc:LineSeries.Data>
 			</dxc:LineSeries>
 		</dxc:ChartView.Series>
-	</dxc:ChartView>
+	</dxc:ChartView>-->
 </ScrollView>
