--- a/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/DataGridControl.xaml
+++ b/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/DataGridControl.xaml
@@ -8,8 +8,9 @@
 			xmlns:local="clr-namespace:DevExpressApp.MauiControls"
 			HorizontalOptions="Fill"
 			VerticalOptions="Fill">
-
-	<dxg:DataGridView ItemsSource="{Binding Employees}"
+	<Label Text="DataGridView (Search and apply TODO comments)" />
+	<!-- TODO: Uncomment -->
+	<!--<dxg:DataGridView ItemsSource="{Binding Employees}"
 					  EditorShowMode="DoubleTap"
 					  AllowDragDropRows="True">
 		<dxg:DataGridView.BindingContext>
@@ -61,5 +62,5 @@
 								MinWidth="130"
 								VerticalContentAlignment="Center" />
 		</dxg:DataGridView.Columns>
-	</dxg:DataGridView>
+	</dxg:DataGridView>-->
 </ScrollView>
