--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp/Presentation/MainPage.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp/Presentation/MainPage.xaml
@@ -1,34 +1,51 @@
 <Page x:Class="GrialKitApp.Presentation.MainPage"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:local="using:GrialKitApp.Presentation"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	mc:Ignorable="d"
-	xmlns:uen="using:Uno.Extensions.Navigation.UI"
-	NavigationCacheMode="Required"
-	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	  xmlns:local="using:GrialKitApp.Presentation"
+	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	  mc:Ignorable="d"
+	  xmlns:uen="using:Uno.Extensions.Navigation.UI"
+	  NavigationCacheMode="Required"
+	  Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
 	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-			<RowDefinition />
-		</Grid.RowDefinitions>
-		<TextBlock Text="{Binding Title}" HorizontalAlignment="Center" />
-
-		<StackPanel Grid.Row="1"
-					HorizontalAlignment="Center"
-					VerticalAlignment="Center"
-					Spacing="16">
-			<embed:MauiHost x:Name="MauiHostElement"
-					xmlns:embed="using:Uno.Extensions.Maui"
-					xmlns:controls="using:GrialKitApp.MauiControls"
-					Source="controls:EmbeddedControl" />
-			<TextBox Text="{Binding Name, Mode=TwoWay}"
-					PlaceholderText="Enter your name:" />
-			<Button Content="Go to Second Page"
-					AutomationProperties.AutomationId="SecondPageButton"
-					Command="{Binding GoToSecond}" />
-		</StackPanel>
+		<NavigationView uen:Region.Attached="True">
+			<NavigationView.MenuItems>
+				<NavigationViewItem Content="Area Chart"
+									uen:Region.Name="AreaChart" />
+				<NavigationViewItem Content="Bar Chart"
+									uen:Region.Name="BarChart" />
+				<NavigationViewItem Content="Bar Multi Series"
+									uen:Region.Name="BarMultiSeries" />
+				<NavigationViewItem Content="Line Chart"
+									uen:Region.Name="LineChart" />
+				<NavigationViewItem Content="Pie Chart"
+									uen:Region.Name="PieChart" />
+			</NavigationView.MenuItems>
+			<Grid uen:Region.Attached="True"
+				  uen:Region.Navigator="Visibility">
+				<embed:MauiHost uen:Region.Name="AreaChart"
+								xmlns:embed="using:Uno.Extensions.Maui"
+								xmlns:controls="using:GrialKitApp.MauiControls"
+								Source="controls:AreaChartSample" />
+				<embed:MauiHost uen:Region.Name="BarChart"
+								xmlns:embed="using:Uno.Extensions.Maui"
+								xmlns:controls="using:GrialKitApp.MauiControls"
+								Source="controls:BarChartSample" />
+				<embed:MauiHost uen:Region.Name="BarMultiSeries"
+								xmlns:embed="using:Uno.Extensions.Maui"
+								xmlns:controls="using:GrialKitApp.MauiControls"
+								Source="controls:BarMultiSeriesSample" />
+				<embed:MauiHost uen:Region.Name="LineChart"
+								xmlns:embed="using:Uno.Extensions.Maui"
+								xmlns:controls="using:GrialKitApp.MauiControls"
+								Source="controls:LineChartSample" />
+				<embed:MauiHost uen:Region.Name="PieChart"
+								xmlns:embed="using:Uno.Extensions.Maui"
+								xmlns:controls="using:GrialKitApp.MauiControls"
+								Source="controls:PieChartSample" />
+			</Grid>
+		</NavigationView>
 	</Grid>
 </Page>
