fix: Commenting out Grial library references

--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/AreaChartSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/AreaChartSample.xaml
@@ -32,9 +32,9 @@
 
     </ContentPage.Resources>
     <VerticalStackLayout Padding="30" Spacing="20">
-
-        <!-- AREA CHART -->
-        <grial:CategoryChart
+		<Label Text="CategoryChart (Search for TODO and uncomment code)" />
+		<!-- TODO: Uncomment -->
+        <!--<grial:CategoryChart
             x:Name="chart"
             AxisFontColor="Gray"
             AxisLinesColor="#E0E3EC"
@@ -52,7 +52,6 @@
             LabelFontColor="Gray"
             ValueLabelFontColor="Gray">
 
-            <!-- First Series -->
             <grial:LineSeries
                 Title="First Time"
                 AreaBrush="#3F75FF"
@@ -64,7 +63,6 @@
                 Color="#3F75FF"
             />
 
-            <!-- Second Series -->
             <grial:LineSeries
                 Title="Returning"
                 AreaBrush="#D9E3FF"
@@ -79,7 +77,6 @@
 
         </grial:CategoryChart>
 
-        <!-- Legend -->
         <grial:MultiSeriesLegend
             x:Name="AreaChartLegend"
             HeightRequest="40"
@@ -89,7 +86,7 @@
                 <LinearItemsLayout Orientation="Horizontal" />
             </grial:MultiSeriesLegend.ItemsLayout>
 
-        </grial:MultiSeriesLegend>
+        </grial:MultiSeriesLegend>-->
 
     </VerticalStackLayout>
 </ContentPage>
