--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarMultiSeriesSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarMultiSeriesSample.xaml
@@ -7,7 +7,9 @@
              Title="BarMultiSeriesSample">
     <VerticalStackLayout Padding="30" Spacing="20">
 
-        <grial:CategoryChart
+		<Label Text="BarMultiSeries (Search for TODO and uncomment code)" />
+		<!-- TODO: Uncomment -->
+		<!--<grial:CategoryChart
             x:Name="chart"
             Grid.Row="1"
             Margin="-20,0,-10,0"
@@ -46,7 +48,7 @@
                 Color="#B176FD"
             />
 
-        </grial:CategoryChart>
+        </grial:CategoryChart>-->
 
     </VerticalStackLayout>
 </ContentPage>
