--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/LineChartSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/LineChartSample.xaml
@@ -7,7 +7,10 @@
              Title="LineChartSample">
     <VerticalStackLayout Padding="30" Spacing="20">
 
-        <grial:CategoryChart
+		<Label Text="LineChart (Search for TODO and uncomment code)" />
+		<!-- TODO: Uncomment -->
+
+		<!--<grial:CategoryChart
             x:Name="chart"
             HeightRequest="100"
             LabelFontColor="Gray"
@@ -26,7 +29,7 @@
                 ValuePath="Value"
                 LabelPath="Label"
             />
-        </grial:CategoryChart>
+        </grial:CategoryChart>-->
 
         <local:SwitchOption x:Name="toggleLabelsSwitch" Label="Toggle Labels" />
         <local:SwitchOption x:Name="toggleHorizontalLinesSwich" Label="Toggle Reference Axis" />
