--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/Templates/SwitchOption.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/Templates/SwitchOption.xaml
@@ -6,7 +6,8 @@
              x:Name="root"
              Margin="0,0,0,-15">
     <ContentView.Resources>
-        <Style TargetType="grial:Checkbox">
+		<!-- TODO: Uncomment -->
+        <!--<Style TargetType="grial:Checkbox">
             <Setter Property="ControlTemplate">
                 <Setter.Value>
                     <ControlTemplate>
@@ -58,7 +59,7 @@
             <Setter Property="CheckedBorderColor" Value="#46C771" />
             <Setter Property="UncheckedBackgroundColor" Value="Transparent" />
             <Setter Property="UncheckedBorderColor" Value="#46C771" />
-        </Style>
+        </Style>-->
     </ContentView.Resources>
     
     <Grid ColumnDefinitions="*,Auto">
@@ -68,9 +69,10 @@
             VerticalOptions="Center"
         />
 
-        <grial:Checkbox 
+		<!-- TODO: Uncomment -->
+        <!--<grial:Checkbox 
             Grid.Column="1" 
-            IsChecked="{ Binding Value, Mode=TwoWay, Source={x:Reference root} }" />
+            IsChecked="{ Binding Value, Mode=TwoWay, Source={x:Reference root} }" />-->
     </Grid>
 </ContentView>
 
