--- a/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarChartSample.xaml
+++ b/UI/MauiEmbedding/GrialKitApp/GrialKitApp.MauiControls/BarChartSample.xaml
@@ -7,8 +7,9 @@
              Title="BarChartSample">
     <VerticalStackLayout Padding="30" Spacing="20">
 
-        <!-- HORIZONTAL BAR CHART -->
-        <grial:HorizontalBarChart
+		<Label Text="BarChart (Search for TODO and uncomment code)" />
+		<!-- TODO: Uncomment -->
+		<!--<grial:HorizontalBarChart
             x:Name="chart1"
             AxisFontColor="DarkGray"
             AxisLinesColor="#E0E3EC"
@@ -65,7 +66,7 @@
                 CornerRadius="8"
             />
 
-        </grial:BarChart>
+        </grial:BarChart>-->
 
         <local:SwitchOption x:Name="toggleLabelsSwitch" Label="Toggle Labels" />
         <local:SwitchOption x:Name="toggleHorizontalLinesSwich" Label="Toggle Reference Axis" />
