fix: Removing Telerik package references

--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/AccordionSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/AccordionSample.xaml
@@ -8,7 +8,9 @@
       <Setter Property="Margin" Value="15, 5" />
     </Style>
   </ContentView.Resources>
-  <telerik:RadAccordion>
+	<Label Text="Accordion Sample (Search for TODO and apply comments)" />
+	<!-- TODO: Uncomment -->
+	<!--<telerik:RadAccordion>
     <telerik:AccordionItem IsExpanded="True" HeaderText="Citizens Financial Group">
       <telerik:AccordionItem.Content>
         <ScrollView>
@@ -56,5 +58,5 @@
         </ScrollView>
       </telerik:AccordionItem.Content>
     </telerik:AccordionItem>
-  </telerik:RadAccordion>
+  </telerik:RadAccordion>-->
 </ContentView>
