--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/App.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/App.xaml
@@ -6,9 +6,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <!--<ResourceDictionary Source="Styles/Colors.xaml" />
-                <ResourceDictionary Source="Styles/Styles.xaml" />-->
-				<local:EmbeddedResources />
+				<local:ColorsAndStyles />
 			</ResourceDictionary.MergedDictionaries>
 			<local:UnoImageConverter x:Key="UnoImageConverter" />
         </ResourceDictionary>
