--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/DataGridSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/DataGridSample.xaml
@@ -3,8 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
              x:Class="TelerikApp.MauiControls.DataGridSample">
-  <Grid>
-    <telerik:RadDataGrid Grid.Row="1"
+	<Grid>
+		<Label Text="DataGrid Sample (Search for TODO and apply comments)" />
+		<!-- TODO: Uncomment -->
+		<!--<telerik:RadDataGrid Grid.Row="1"
                          ItemsSource="{Binding People}"
                          AutoGenerateColumns="False"
                          SelectionUnit="Row"
@@ -27,7 +29,7 @@
                                        SizeMode="Auto" />
         <telerik:DataGridNumericalColumn PropertyName="Id"
                                          HeaderText="Id" />
-        <!--<telerik:DataGridTemplateColumn HeaderText="Country"
+        --><!--<telerik:DataGridTemplateColumn HeaderText="Country"
                                         MinimumWidth="40">
           <telerik:DataGridTemplateColumn.CellContentTemplate>
             <DataTemplate>
@@ -38,8 +40,8 @@
               </Grid>
             </DataTemplate>
           </telerik:DataGridTemplateColumn.CellContentTemplate>
-        </telerik:DataGridTemplateColumn>-->
+        </telerik:DataGridTemplateColumn>--><!--
       </telerik:RadDataGrid.Columns>
-    </telerik:RadDataGrid>
+    </telerik:RadDataGrid>-->
   </Grid>
 </ContentView>
