--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/FinancialChartSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/FinancialChartSample.xaml
@@ -4,7 +4,9 @@
              xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
              x:Class="TelerikApp.MauiControls.FinancialChartSample">
   <Grid x:Name="RootGrid">
-    <Grid.RowDefinitions>
+		<Label Text="Financial Chart Sample (Search for TODO and apply comments)" />
+		<!-- TODO: Uncomment -->
+		<!--<Grid.RowDefinitions>
       <RowDefinition Height="50"/>
       <RowDefinition Height="*"/>
       <RowDefinition Height="50"/>
@@ -96,6 +98,6 @@
       </telerik:RadCartesianChart.VerticalAxis>
       <telerik:RadCartesianChart.Series>
       </telerik:RadCartesianChart.Series>
-    </telerik:RadCartesianChart>
+    </telerik:RadCartesianChart>-->
   </Grid>
 </ContentView>
