--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/PdfViewSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/PdfViewSample.xaml
@@ -3,14 +3,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
              x:Class="TelerikApp.MauiControls.PdfViewSample">
-  <Grid RowDefinitions="Auto,*">
-    <telerik:RadPdfViewerToolbar PdfViewer="{x:Reference pdfViewer }" x:Name="pdfViewerToolbar" >
+	<Grid RowDefinitions="Auto,*">
+		<Label Text="Pdf Viewer Sample (Search for TODO and apply comments)" />
+		<!-- TODO: Uncomment -->
+		<!--<telerik:RadPdfViewerToolbar PdfViewer="{x:Reference pdfViewer }" x:Name="pdfViewerToolbar" >
       <telerik:PdfViewerFitToWidthToolbarItem />
       <telerik:PdfViewerZoomInToolbarItem />
       <telerik:PdfViewerZoomOutToolbarItem />
       <telerik:PdfViewerNavigateToPreviousPageToolbarItem />
       <telerik:PdfViewerNavigateToNextPageToolbarItem />
     </telerik:RadPdfViewerToolbar>
-    <telerik:RadPdfViewer x:Name="pdfViewer" Grid.Row="1" />
+    <telerik:RadPdfViewer x:Name="pdfViewer" Grid.Row="1" />-->
   </Grid>
 </ContentView>
