--- a/UI/MauiEmbedding/TelerikApp/TelerikApp/Presentation/MainPage.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp/Presentation/MainPage.xaml
@@ -24,8 +24,8 @@
 									uen:Region.Name="AreaChart" />
 				<NavigationViewItem Content="Financial Chart"
 									uen:Region.Name="FinancialChart" />
-				<NavigationViewItem Content="Guage"
-									uen:Region.Name="Guage" />
+				<NavigationViewItem Content="Gauge"
+									uen:Region.Name="Gauge" />
 				<NavigationViewItem Content="PDF Viewer"
 									uen:Region.Name="PdfViewer" />
 				<NavigationViewItem>
@@ -67,8 +67,8 @@
 								Visibility="Collapsed" />
 				<embed:MauiHost xmlns:controls="using:TelerikApp.MauiControls"
 								xmlns:embed="using:Uno.Extensions.Maui"
-								uen:Region.Name="Guage"
-								Source="controls:GuageSample"
+								uen:Region.Name="Gauge"
+								Source="controls:GaugeSample"
 								Visibility="Collapsed" />
 				<embed:MauiHost xmlns:controls="using:TelerikApp.MauiControls"
 								xmlns:embed="using:Uno.Extensions.Maui"
