--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/AreaChartSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/AreaChartSample.xaml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
-             x:Class="TelerikApp.MauiControls.AreaChartSample">
-  <ContentView.Resources>
+			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
+			 x:Class="TelerikApp.MauiControls.AreaChartSample">
+	<!-- TODO: Uncomment -->
+	<!--<ContentView.Resources>
     <ResourceDictionary>
-      <ResourceDictionary.MergedDictionaries>
-        <!--<styles:GalleryResources/>-->
-      </ResourceDictionary.MergedDictionaries>
       <DataTemplate x:Key="lineArea">
         <telerik:RadCartesianChart BackgroundColor="{AppThemeBinding Light=White}">
           <telerik:RadCartesianChart.ChartBehaviors>
@@ -143,5 +141,7 @@
         </telerik:RadCartesianChart>
       </DataTemplate>
     </ResourceDictionary>
-  </ContentView.Resources>
+  </ContentView.Resources>-->
+	<Label Text="AreaChart Sample (Search for TODO and apply comments)" />
+
 </ContentView>
