--- a/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/GaugeSample.xaml
+++ b/UI/MauiEmbedding/TelerikApp/TelerikApp.MauiControls/GaugeSample.xaml
@@ -2,9 +2,11 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:telerik="http://schemas.telerik.com/2022/xaml/maui"
-             x:Class="TelerikApp.MauiControls.GuageSample">
+             x:Class="TelerikApp.MauiControls.GaugeSample">
   <Grid>
-    <telerik:RadRadialGauge x:Name="gauge">
+		<Label Text="Gauge Sample (Search for TODO and apply comments)" />
+		<!-- TODO: Uncomment -->
+		<!--<telerik:RadRadialGauge x:Name="gauge">
       <telerik:RadRadialGauge.Axis>
         <telerik:GaugeLinearAxis Maximum="200"
                                  Minimum="0"
@@ -25,6 +27,6 @@
           </telerik:GaugeGradientRange>
         </telerik:GaugeRangesDefinition>
       </telerik:RadRadialGauge.Ranges>
-    </telerik:RadRadialGauge>
+    </telerik:RadRadialGauge>-->
   </Grid>
 </ContentView>
