--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/App.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/App.xaml
@@ -20,6 +20,7 @@
 				<MaterialResources xmlns="using:Uno.Material" />-->
 
 				<ResourceDictionary Source="Styles/Controls/ToggleButton.xaml" />
+				<ResourceDictionary Source="Styles/Controls/Button.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</Application.Resources>
