fix: Adding toolkit reference to fix ios launch issue

--- a/UI/MauiEmbedding/SyncfusionApp/SyncfusionApp/AppResources.xaml
+++ b/UI/MauiEmbedding/SyncfusionApp/SyncfusionApp/AppResources.xaml
@@ -4,10 +4,8 @@
 	<ResourceDictionary.MergedDictionaries>
 		<!-- Load WinUI resources -->
 		<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-		<!--<MaterialToolkitTheme xmlns="using:Uno.Toolkit.UI.Material"
-			ColorOverrideSource="ms-appx:///SyncfusionApp/Styles/ColorPaletteOverride.xaml"
-			FontOverrideSource="ms-appx:///SyncfusionApp/Styles/MaterialFontsOverride.xaml" />-->
-
+		<!-- Load Uno.UI.Toolkit resources -->
+		<ToolkitResources xmlns="using:Uno.Toolkit.UI" />
 	</ResourceDictionary.MergedDictionaries>
 	<!-- Add resources here -->
 
