--- a/UI/MauiEmbedding/ArcGisApp/ArcGisApp/AppResources.xaml
+++ b/UI/MauiEmbedding/ArcGisApp/ArcGisApp/AppResources.xaml
@@ -4,7 +4,8 @@
 	<ResourceDictionary.MergedDictionaries>
 		<!-- Load WinUI resources -->
 		<XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-
+		<!-- Load Uno.UI.Toolkit resources -->
+		<ToolkitResources xmlns="using:Uno.Toolkit.UI" />
 	</ResourceDictionary.MergedDictionaries>
 	<!-- Add resources here -->
 
